CMAKE_MINIMUM_REQUIRED (VERSION 2.6 FATAL_ERROR)

SET(MODULE_NAME httpscws)
PROJECT(${MODULE_NAME})

INCLUDE_DIRECTORIES(
	${CMAKE_SOURCE_DIR}
	/usr/local/include/scws
)
SET(SRC_LIST
	httpscws.cpp)

LINK_DIRECTORIES(/usr/lib)
LINK_DIRECTORIES(/usr/local/lib)
ADD_DEFINITIONS(-DDEBUG)
LINK_LIBRARIES(m)
LINK_LIBRARIES(pthread)
LINK_LIBRARIES(scws)

ADD_EXECUTABLE(${MODULE_NAME} ${SRC_LIST})
